Add core public brand readonly endpoints
